--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,7 @@
               }
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",    "node_modules/flowbite/dist/flowbite.css"
             ],
             "scripts": []
           },
